src/objects/DC311_Landing_Page_Service_Type__mdt.object
<CustomObject>
    <fields>
        <fullName>agency__c</fullName>
        <label>agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>external_name__c</fullName>
        <label>external_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>group__c</fullName>
        <label>group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>keywords__c</fullName>
        <label>keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>long_external_description__c</fullName>
        <label>long_external_description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>metadata__c</fullName>
        <defaultValue>false</defaultValue>
        <label>metadata</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>service_code__c</fullName>
        <label>service_code</label>
        <picklist>
            <picklistValues>
                <fullName>S0031</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>S0276</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S0441</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>service_location_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>service_location_required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>service_name__c</fullName>
        <label>service_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sla__c</fullName>
        <label>sla</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sla_type__c</fullName>
        <label>sla_type</label>
        <picklist>
            <picklistValues>
                <fullName>Business days</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>DC311 Landing Page Service Type</label>
    <pluralLabel>DC311 Landing Page Service Types</pluralLabel>
</CustomObject>